# Ex4-CPP

./: CMakeLists.txt  Demo.cpp  MyDemo.cpp  MyTest.cpp  SmartTeam.hpp  StudentTest1.cpp  Team.hpp  Team2.cpp  Team2.hpp  test
sources/: Character.cpp  Character.hpp  Cowboy.cpp  Cowboy.hpp  Ninja.cpp  Ninja.hpp  OldNinja.cpp  OldNinja.hpp  Point.cpp  Point.hpp  SmartTeam.cpp  SmartTeam.hpp  Team.cpp  Team.hpp  Team2.cpp  Team2.hpp  TrainedNinja.cpp  TrainedNinja.hpp  YoungNinja.cpp  YoungNinja.hpp
