cmake_minimum_required(VERSION 3.25)
project(EX4_CPP_B)

set(CMAKE_CXX_STANDARD 14)

add_executable(EX4_CPP_B sources/Character.cpp sources/Cowboy.cpp sources/Ninja.cpp sources/OldNinja.cpp sources/Point.cpp sources/SmartTeam.cpp sources/Team.cpp sources/Team2.cpp sources/TrainedNinja.cpp sources/YoungNinja.cpp Demo.cpp StudentTest1.cpp TestRunner.cpp MyDemo.cpp MyTest.cpp)
